<resources>
    <string name="app_name">SongSpot</string>
    <string name="enter_your_name">Enter your name...</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="your_rating">Your Rating</string>
    <string name="average_rating">Average Rating</string>
    <string name="submit_comment">Submit Comment</string>
    <string name="view_all_comments">View All Comments</string>
    <string name="comments">Comments</string>
    <string name="categories">Categories</string>
    <string name="songspot">SongSpot</string>
    <string name="song_list">Songs</string>
</resources>